resolve horizontal scroll oveflowed

--- a/ppaa/static/desktop/components.css
+++ b/ppaa/static/desktop/components.css
@@ -145,7 +145,7 @@ nav .menu{margin-left:auto;}
 	margin-right:.5rem;
 	min-width:10em;
 }
-.tag-form input{width:100%;}
+.tag-form input{width:inherit;}
 
 .one-mark .del{
 	display:flex;
